# ChangeLog for dev-ruby/cri
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/cri/ChangeLog,v 1.15 2014/10/30 13:41:47 mrueg Exp $

  30 Oct 2014; Manuel Rüger <mrueg@gentoo.org> -cri-2.4.1.ebuild,
  -cri-2.5.0.ebuild, cri-2.6.1.ebuild:
  Drop jruby target. Cleanup old.

*cri-2.6.1 (18 Jun 2014)

  18 Jun 2014; Hans de Graaff <graaff@gentoo.org> +cri-2.6.1.ebuild:
  Version bump.

  26 May 2014; Manuel Rüger <mrueg@gentoo.org> cri-2.4.1.ebuild,
  cri-2.5.0.ebuild:
  Remove ruby18 target.

*cri-2.5.0 (02 Mar 2014)

  02 Mar 2014; Manuel Rüger <mrueg@gentoo.org> +cri-2.5.0.ebuild,
  -cri-2.4.0-r1.ebuild:
  Version bump. Cleanup old.

*cri-2.4.1 (30 Nov 2013)

  30 Nov 2013; Hans de Graaff <graaff@gentoo.org> +cri-2.4.1.ebuild:
  Version bump.

*cri-2.4.0-r1 (11 Nov 2013)

  11 Nov 2013; Manuel Rüger <mrueg@gentoo.org> +cri-2.4.0-r1.ebuild,
  -cri-2.4.0.ebuild:
  Add ruby20 target. Cleanup old.

  29 Oct 2013; Hans de Graaff <graaff@gentoo.org> -cri-2.2.1.ebuild,
  -cri-2.3.0.ebuild:
  Cleanup.

*cri-2.4.0 (02 Sep 2013)

  02 Sep 2013; Manuel Rüger <mrueg@gentoo.org> +cri-2.4.0.ebuild:
  Version bump.

*cri-2.3.0 (05 Aug 2012)

  05 Aug 2012; Hans de Graaff <graaff@gentoo.org> +cri-2.3.0.ebuild:
  Version bump.

  14 Jul 2012; Hans de Graaff <graaff@gentoo.org> cri-2.2.1.ebuild:
  Add missing dependency on yard when testing, fixing bug 425310.

  14 Jul 2012; Hans de Graaff <graaff@gentoo.org> -cri-2.2.0.ebuild:
  Remove old version.

*cri-2.2.1 (07 Apr 2012)

  07 Apr 2012; Hans de Graaff <graaff@gentoo.org> +cri-2.2.1.ebuild:
  Version bump.

  09 Mar 2012; Naohiro Aota <naota@gentoo.org> cri-2.2.0.ebuild:
  Add ~x86-fbsd.

  01 Mar 2012; Hans de Graaff <graaff@gentoo.org> cri-2.2.0.ebuild:
  Add ruby19. Thanks to Shunsuke Shimizu in bug 406369.

*cri-2.2.0 (28 Feb 2012)

  28 Feb 2012; Alex Legler <a3li@gentoo.org> +cri-2.2.0.ebuild, +metadata.xml: