@@ -1,4 +1,6 @@
+DIST cri-2.4.1.gem 20480 SHA256 1c736c7e4fb080e916af10fccbfd8dab39224126db31377ddc9048ea8f2a8070 SHA512 57ca21cdad59fcff78cdb042be3614f977ed0b5ad2f42e2b2f42df3eac6656fac2b6a33fe0af1ac511cce9db0f1345403f0846899353d156a7c28efdc43e8d4a WHIRLPOOL bffe0f9b371feee542556e177be0e645b4804dcb58bc2ee0aa7d5ee1dad23d3e6b6c1c9fe2ed0edb0ae20b33361eb518cf661d1bdab871c4038fd4a1ceed5369
 DIST cri-2.6.1.gem 23552 SHA256 349dedff69722138ea49b69f32e2195094b4e2300caf230b33bdd29c3fdffc7f SHA512 61ccbbc34e58ca7473817beccc7e2af29ab48981d58ddb4d753e32c98ae933acc33e696d922d3f3fc4adfa3f2ee230a7d2eb27bd671f2b46dfda72ad9ab15e55 WHIRLPOOL a45affae09c29318d0ef59604923f37369cc9af1c51d56ca58b9d8391797c22ebeef703e87d50d7d9cf1a4eb742241591503bc4491d312b9ecc050235c66599a
+EBUILD cri-2.4.1.ebuild 646 SHA256 4c79a5e8b6bf99e753e71793f5ebfbd21bfe39610c0536d414872d2be00cb94c SHA512 95c8d7ad70e5eaa34c066b337be63605dbf1f205df9b65a05600ee69f6942bfadfeec662e5a3ae4895766c302a5a91864ab941adf9af36eb29250c6f97546197 WHIRLPOOL aece0511781bb21e77f27ec10fd47c946fa93abbb0a0bcf2f71b4e4294ced2d082b12489d380126a12b83c9cbd3dc8301446ea76623d96f519371b0c7c63adcf
 EBUILD cri-2.6.1.ebuild 771 SHA256 5033f7a41a11a418ad6cb482465828a1fa60df7b6dadb46ba39012a09331fcd5 SHA512 2f8a98479e6e53edf7837a21522895b454825b794070a6a0f8bd2cadf3976f725499fdb7b2da78c6c84b2f89cb794ab39e66e987355d5deb625dfa557a047200 WHIRLPOOL 2a9aab17205b6c818cb2355a9727fb6c8c9dd8b00f53975e3452226d0d129726acb4fc5a5e3008a8fcc0cfeda2fcbfe1f45d2c66405a9e798f997ff84c680634
-MISC ChangeLog 2019 SHA256 0af94abbb39b4ea292e643163e8bcf77f8ad151b9be0e903940070dfccb4d094 SHA512 c84fe91c82806a35516fbb3e32bbb9c9d44f5f0fbe4d8c4f6810da62f14277d74ef45c96c579e2410c0fa01f41eef7d604dc8158fd371bedac53cc1fef7a0f98 WHIRLPOOL 264968feaddacdbdc0f19db0f2e1eec87ea5bf2c85c54ba825697b7d87eabd48c0a73907e271ce2664ba4bdd200b651f99f77a60452f55ab133cf2f2d9517ce3
+MISC ChangeLog 2166 SHA256 c2f398cf77a3f1800f9a94fbcf6cd8288c84849e07d730546030433b6db98ce7 SHA512 eb1f18d5d1c028998d8c9b4872a704a882e2b7fa28285d2ffc431424633d0749383221ed6567902a356b668f789e64da2226d5cf315db77987c97f931acdf394 WHIRLPOOL 172ef39490bc03fd74b7bba7684b5bdd51eca3c89f809b5bcbb577e64f4d30a7c5a5b76b08f8946f869701e65cb27e99a886169716b7b9303b2e884801137669
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
