@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/cri
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/cri/ChangeLog,v 1.15 2014/10/30 13:41:47 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/cri/ChangeLog,v 1.16 2014/11/04 17:26:48 mrueg Exp $
+
+*cri-2.4.1 (04 Nov 2014)
+
+  04 Nov 2014; Manuel Rüger <mrueg@gentoo.org> +cri-2.4.1.ebuild:
+  Readd 2.4.1 to satisfy app-admin/r10k dependencies
 
   30 Oct 2014; Manuel Rüger <mrueg@gentoo.org> -cri-2.4.1.ebuild,
   -cri-2.5.0.ebuild, cri-2.6.1.ebuild:
